Correct text alignement in .infos, .errors 30px => 53px
git-svn-id: http://piwigo.org/svn/trunk@6265 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/themes/default/default-layout.css
+++ b/admin/themes/default/default-layout.css
@@ -829,7 +829,7 @@ h2:lang(en) { text-transform:capitalize; }
   font-weight:bold;
   background-repeat: no-repeat;
   background-position: 5px 5px;
-  padding:5px 70px 0pt 30px;
+  padding:5px 70px 0pt 53px;
   min-height: 54px;
 }
 
